--- a/style.css
+++ b/style.css
@@ -140,17 +140,16 @@ section{
 
 .nav_bar{
     z-index: 1000;
-    width: 70%;
+    width: 60%;
     height: 100%;
     padding: 0em 0.75em;
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: center;
     font-size: 1.25rem;
     line-height: 1.25rem;
     letter-spacing: 0.075em;
     text-align: center;
-    padding: 0 14rem;
 }
 
 .nav_bar a{
@@ -159,6 +158,7 @@ section{
     justify-content: center;
     height: 100%;
     transition: 0.5s linear;
+    padding: 0 1rem;
 }
 
 .nav_bar a span{
@@ -630,7 +630,7 @@ font-size: 0.775rem;
 .common-div,
 .submit_section-div{
     width: 50%;
-    height: 100%;
+    height: fit-content;
     margin: 0 1.25rem;
 }
 
@@ -685,7 +685,7 @@ font-size: 0.775rem;
 }
 
 .common-last_winner_link{
-    height: 3.2rem;
+    height: 2.5rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -711,14 +711,14 @@ color: white;
 }
 
 .common-last_winner_img img{
-    height: 3rem;
-    width: 3rem;
+    height: 2.5rem;
+    width: 2.5rem;
     border-radius: 3rem;
     padding: 0.1rem;
 }
 
 #last_winner_name{
-    font-size: 1.6rem;
+    font-size: 1rem;
     width: 100%;
     height: 100%;
     display: flex;
@@ -735,8 +735,8 @@ color: white;
 }
 
 .common-last_winner_external_link img{
-    height: 3rem;
-    width: 3rem;
+    height: 2.75rem;
+    width: 2.75rem;
     border-radius: 0;
     padding: 0.75rem;
 }
@@ -747,7 +747,7 @@ color: white;
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: center;
     padding: 1rem 0.5rem 0;
 }
 
@@ -760,8 +760,8 @@ color: white;
 }
 
 .common-last_winner_socials a img{
-    width: 2rem;
-    height: 2rem;
+    width: 1.5rem;
+    height: 1.5rem;
     padding: 2.5%;
     transition: 0.5s;
 }
@@ -783,6 +783,10 @@ transition: 0.5s;
     width: 100%;
 }
 
+.submit_streamer_form_item{
+    margin: 0.5rem 0;
+}
+
 .submit_section-div form h2{
     font-size: 1.1rem;
     align-self: flex-start;
@@ -800,9 +804,10 @@ transition: 0.5s;
 }
 
 .submit_section-div form button{
+    font-size: 1.2rem;
     align-self: center;
-    width: 40%;
-    height: 2rem;
+    width: 60%;
+    height: 2.5rem;
     border: none;
     border-radius: 2.5rem;
     outline: none;
@@ -1100,3 +1105,364 @@ input:invalid:required {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
 }
+
+/* RESPONSIVE ------------------------------------------ */
+
+@media(max-height:600px),
+(max-width:1200px){
+        
+    .background_img{
+        display: none;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 175%;
+        z-index: -1;
+    }
+
+    body{
+        height: 60rem;
+        width: auto;
+        background-image: url("./media/Background.png");
+        background-size: cover;
+        background-position: center;
+    }
+
+    .submit_section-container{
+        position: absolute;
+        top: 3.75rem;
+        width: 50%;
+        height: max-content;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 0 0 5rem;
+    }
+
+    .common-div,
+    .submit_section-div{
+        width: 50%;
+    }
+
+    #submit_section{
+        height: auto;
+        width: 100%;
+    }
+
+    .submit_section-div{
+        margin-top: 1rem;
+    }
+    
+}
+
+@media only screen and (hover: none) and (pointer: coarse){
+    .background_img{
+        display: none;
+        position: absolute;
+        width: 100%;
+        height: auto;
+        z-index: -1;
+    }
+
+    body{
+        height: 60rem;
+        background-image: url("./media/Background.png");
+        background-size: cover;
+    }
+
+    .submit-section{
+        height: 100%;
+    }
+
+    .submit_section-container{
+        position: absolute;
+        top: 3.75rem;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .comon-info, .common-last_winner, .submit_section-div{
+        margin: 0.5rem;
+    }
+}
+
+/*
+@media(max-width: 1370px){
+    .s4-info_name{
+      font-size: 1.2rem;
+      padding-right: 0.5rem;
+    }
+  }
+  
+  @media(max-width: 1250px){
+    .s3{
+      padding: 7.5rem 3rem 7.5rem;
+    }
+  }
+  
+  @media(max-width: 1080px){
+    html{
+      font-size: 14px;
+    }
+  }
+  
+  @media(max-width: 980px){
+    html{
+      font-size: 12px;
+    }
+  }
+  
+  @media(max-width: 780px){
+    html{
+      font-size: 10px;
+    }
+  }
+  
+  @media(max-width: 650px){
+    html{
+      font-size: 8px;
+    }
+  }
+  
+  @media(max-width: 500px){
+    html{
+      font-size: 6px;
+    }
+  }
+  
+  @media only screen and (hover: none) and (pointer: coarse){
+    html{
+      font-size: 7px;
+    }
+  
+    .header{
+      height: 5rem;
+    }
+    .logo_div{
+      display: none;
+    }
+    .nav_bar{
+      width: 100%;
+      font-size: 1.5rem;
+    }
+  
+    .side_bar{
+      top: 94%;
+      left: 90%;
+      transform: translate(-90%, -94%);    transform: scale(2);
+    }
+  
+    .s1_buttons a{
+      font-size: 2rem;
+    }
+  
+  
+    #s2-mid{
+      flex-direction: column;
+    }
+    #s2-div_description{
+      padding: 4em 4em;
+    }
+    #s2-description_mid{
+      width: 100%;
+    }
+    #s2-img{
+      width: 100%;
+    }
+    .s2-description_title{
+      font-size: 10rem;
+      padding: 3rem 0;
+    }
+    .s2-description_text{
+      font-size: 2.5em;
+    }
+  
+    #s6-div_title{
+      font-size: 10rem;
+    }
+    #s6-div_content{
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+    #s6-video{
+      width: 100%;
+      height: 30rem;
+    }
+    #s6-navigation{
+      flex-direction: row;
+      height: auto;
+      width: 100%;
+      height: auto;
+      margin-top: 2rem;
+    }
+    #s6-navigation li{
+      width: 30%;
+      margin: 0.5rem 0.75rem;
+    }
+  
+    #s3-div_title{
+      font-size: 10rem;
+    }
+    #s3-div_timeline{
+      align-items: center;
+      justify-content: center;
+    }
+    .s3-timeline_container{
+      justify-content: center;
+    }
+    #s3-timeline_container-top,
+    #s3-timeline_container-bot{
+      flex-direction: row-reverse;
+    }
+    .s3-spacing{
+      display: none;
+    }
+    .s3-timeline_item{
+      width: 100%;
+      padding: 2rem 0;
+    }
+    .s3-timeline_item_title{
+      font-size: 7.5em;
+      text-shadow:
+        0 0 0.25rem hsl(0, 0%, 90%), 
+        0 0 0.5rem hsl(0, 0%, 90%);
+    }
+    .s3-timeline_item_text{
+      font-size: 2.5rem;
+      width: 100%;
+    }
+    
+    #s4-div_title{
+      font-size: 10rem;
+    }
+    .s4-div_Tokenomics{
+      flex-direction: column;
+      align-items: center;
+    }
+    #s4-div_info_right{
+      padding: 3rem;
+    }
+    .s4-info_name{
+      font-size: 2rem;
+      width: 30%;
+      padding: 0 2rem 0 0;
+    }
+    .s4-info_number{
+      font-size: 1.6rem;
+      width: 70%;
+    }
+    #s4-info_fee_percentage{
+      font-size: 2rem;
+      padding: 0 1rem 0 0;
+    }
+    #s4-info_fee_percentage_text{
+      font-size: 1.6rem;
+    }
+  
+    .s5{
+      padding: 7.5rem 2rem;
+    }
+    #s5-div_title{
+      font-size: 10rem;
+    }
+    #s5-div_content{
+      width: 100%;
+    }
+    .s5-team_item{
+      width: 60%;
+      min-width: 15rem;
+      height: 100%;
+      margin: 2rem 0;
+      border-radius: 1rem;
+      background: hsl(0, 0%, 10%);
+      box-shadow: 0 0 0.25rem hsl(0, 0%, 90%),
+      0 0 0.25rem hsl(51, 98%, 70%),
+      0 0 0.5rem hsl(51, 98%, 60%),
+      0 0 0.75rem hsl(51, 98%, 50%),
+      0 0 1rem hsl(51, 98%, 40%),
+      0 0 1.2rem hsl(51, 100%, 30%);
+    }
+    .s5-team_description{
+      font-size: 2.5rem;
+      padding: 0 0.2rem 1em;
+    }
+    .s5-team_description-Name{
+      font-size: 3rem;
+      padding: 1em 0.4em 0.5rem;
+    }
+    .s5-team_socials{
+      max-height: 10rem;
+      padding: 0 0rem 3rem;
+    }
+    .s5-team_socials_img{
+      max-width: 5rem;
+      max-height: 5rem;
+    }
+  
+    #foot-info{
+      padding: 1rem 0 8rem 0;
+    }
+    .foot-info_socials{
+      width: 75%;
+      -webkit-box-reflect: below -20% linear-gradient(transparent 12%, rgba(0, 0, 0, 0.007) 20%, rgba(0, 0, 0, 0.05) 70%);
+    }
+    .foot-info_socials_img img{
+      width: 7.5rem;
+      height: 7.5rem;
+    }
+    #foot-copyright{
+      font-size: 2.5rem;
+    }
+    #foot-developedby{
+      font-size: 1.5rem;
+    }
+  
+    
+  
+    @media(min-width: 750px){
+      html{
+        font-size: 10px;
+      }
+    }
+  
+    @media(min-width: 1000px){
+      html{
+        font-size: 16px;
+      }
+    }
+    
+    
+    @media(max-width: 400px){
+      html{
+        font-size: 6px;
+      }
+    }
+    @media(max-width: 350px){
+      html{
+        font-size: 5px;
+      }
+    }
+    @media(max-width: 300px){
+      html{
+        font-size: 4px;
+      }
+      .header{
+        height: 7.5rem;
+      }
+  
+      .s1_buttons a{
+        font-size: 4rem;
+      }
+      .nav_bar{
+        font-size: 2rem;
+      }
+    }
+  }
+*/
+
